# orchestrator/docs/swagger.json
@@ -333,9 +333,6 @@
         },
         "dto.CalculateRequest": {
             "type": "object",
-            "required": [
-                "expression"
-            ],
             "properties": {
                 "expression": {
                     "type": "string",
@@ -355,6 +352,10 @@
         "dto.Expression": {
             "type": "object",
             "properties": {
+                "expression": {
+                    "type": "string",
+                    "example": "2+2"
+                },
                 "id": {
                     "type": "string",
                     "example": "01JTE60CDWQ5R3QSWZBP8J6FG3"
