# orchestrator/internal/controllers/dto/solverGet.go
@@ -11,15 +11,17 @@ type GetByIdExpressionResponse struct {
 }
 
 type Expression struct {
-	Id     string  `json:"id" example:"01JTE60CDWQ5R3QSWZBP8J6FG3"`
-	Result float64 `json:"result" example:"4"`
-	Status string  `json:"status" example:"DONE"`
+	Id         string  `json:"id" example:"01JTE60CDWQ5R3QSWZBP8J6FG3"`
+	Expression string  `json:"expression" example:"2+2"`
+	Result     float64 `json:"result" example:"4"`
+	Status     string  `json:"status" example:"DONE"`
 }
 
 func NewExpression(expr expressions.Expression) Expression {
 	res := Expression{
-		Id:     expr.ID,
-		Result: expr.Res,
+		Id:         expr.ID,
+		Result:     expr.Res,
+		Expression: expr.Expr,
 	}
 
 	if !expr.Finished {
