# orchestrator/internal/controllers/expr/getById.go
@@ -9,7 +9,7 @@ import (
 )
 
 // GetById @Summary      Получить выражение по ID
-// @Description  Выражение состоит из ID (ULID), Result (0 или другое число) и Status (DONE - Успешно выполнено, FAILED - Ошибка при выполнении, PROCESSING - Выполняется). Возвращает выражение при успешном запросе
+// @Description  Выражение состоит из ID (ULID), Expression (само выражение), Result (0 или другое число) и Status (DONE - Успешно выполнено, FAILED - Ошибка при выполнении, PROCESSING - Выполняется). Возвращает выражение при успешном запросе
 // @Tags         expressions
 // @Accept       json
 // @Produce      json
